# MPointer

./: CMakeLists.txt  Listas  Listas.cpp  MPointer  MPointer.cpp  Main  MainDLL  README.md
DLLTests/: DLLNode.cpp  DoubleLinkedList.cpp  Gtest.cpp  MainDLL.cpp  SortingAlgorithms.cpp
DLLTests/Headers/: DLLNode.h  DoubleLinkedList.h  SortingAlgorithms.h
MPointerFiles/: MPointer  MPointer.cpp  MPointer.h  MPointerGC.cpp  MPointerGC.h  MPointerList.cpp  MPointerList.h  Main.cpp
MPointerFiles/Headers/: MPointer.h  MPointerGC.h  MPointerList.h
